--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
     <title>APEX MOTORS | Premium Motorcycle Dealership</title>
+    <script id="hydro_config" type="text/javascript">
+        window.Hydro_tagId = "ca0c5a30-e485-4aa8-8f9a-ffee7c7a5953";
+      </script>
+      <script id="hydro_script" src="https://pre-prod-track.hydro.online/"></script>
     <style>
         * {
             margin: 0;
